--- a/css/style.scss
+++ b/css/style.scss
@@ -12,6 +12,7 @@ body{
 	height: 100%;
 	font-family: 'Ubuntu', sans-serif;
 	font-size: 16px;
+	background-color: #ECEFF1;
 }
 
 a{
@@ -58,16 +59,6 @@ a{
 	right:14px;
 	font-size:60px;
 }
-@media screen and (max-height:450px){
-	.overlay-menu a{
-		font-size:20px;
-	}
-	.overlay-menu .closebtn{
-		font-size:40px;
-		top:15px;
-		right:35px;
-	}
-}
 
 .nav-menu{
 	width:100%;
@@ -86,6 +77,21 @@ a{
 	width:70%;
 	justify-content:flex-end;
 	padding-right:10px;
+}
+
+.mobile-menu{
+	display: none;
+	width: 50px;
+	flex-direction: column;
+	justify-content: space-between;
+	margin-right: 20px;
+}
+
+.mobile-menu div{
+	height: 3px;
+	width: 100%;
+	background-color: #005BEA;
+	margin: 5px;
 }
 
 .links a{
@@ -132,5 +138,375 @@ a{
 
 .gradient-overlay h1{
 	color: #fff;
-	font-size: 40px;
+	font-size: 64px;
+	width: 50%;
+	letter-spacing: 3px;
+}
+
+.gradient-overlay p{
+	font-size: 22px;
+	width: 320px;
+	color: #ffffff;
+}
+
+.content{
+	width: 90%;
+	max-width: 1400px;
+	margin: 0 auto;
+	background-color: #ffffff;
+	box-sizing: border-box;
+	padding: 4em;
+}
+
+.description h1{
+	margin-top: 0;
+}
+
+.description p{
+	width: 50%;
+	font-size: 18px;
+}
+
+.services-brief{
+	padding-top: 0;
+	display: flex;
+	flex: 1;
+	flex-wrap: wrap;
+	justify-content: space-between;
+}
+
+.service{
+	width: 24%;
+	min-width: 270px;
+	display: flex;
+	flex-direction: column;
+	font-size: 18px;
+}
+
+.service .header{
+	color: #ffffff;
+	text-transform: uppercase;
+	border-radius: 3px;
+	letter-spacing: 1px;
+	font-size: 20px;
+	padding: 10px;
+	margin-bottom: 0;
+
+}
+
+.digital .header{
+	background: #005BEA;
+	background: -webkit-linear-gradient(to right, #00C6FB, #005BEA);
+	background: linear-gradient(to right, #00C6FB, #005BEA);
+}
+
+.consultant .header{
+	background: #C1272D;
+	background: -webkit-linear-gradient(to right, #E74C3C, #C1272D);
+	background: linear-gradient(to right, #E74C3C, #C1272D);
+}
+
+.storage .header{
+	background: #F15A24;
+	background: -webkit-linear-gradient(to right, #F7931E, #F15A24);
+	background: linear-gradient(to right, #F7931E, #F15A24);
+}
+
+.hwsw .header{
+	background: #006837;
+	background: -webkit-linear-gradient(to right, #8CC63F, #006837);
+	background: linear-gradient(to right, #8CC63F, #006837);
+}
+
+.service img{
+	width: 150px;
+	margin: 0 auto
+}
+
+.image-section{
+	width: 100%;
+	height: 40%;
+	background-image: url("../images/business.jpg");
+	background-size: cover;
+	
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.image-section .gradient-overlay{
+	width: 100%;
+	padding: 0;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.image-section img{
+	width: 300px;
+	margin: 0 auto;
+}
+
+.contact{
+	display: flex;
+	justify-content: space-between;
+	align-items: flex-end;
+}
+
+.contact h1{
+	margin-top: 0;
+	text-transform: uppercase;
+}
+
+.contact .form p{
+	margin-top: 0;
+}
+
+form{
+	display: flex;
+	flex-direction: column;
+}
+
+form input[type=text], form input[type="email"], textarea{
+	background-color: #ECEFF1;
+	padding: 10px;
+	margin-bottom: 16px;
+	border: none;
+}
+
+input[type="submit"]{
+	background: #005BEA;
+	background: -webkit-linear-gradient(to right, #00C6FB, #005BEA);
+	background: linear-gradient(to right, #00C6FB, #005BEA);
+	cursor: pointer;
+	width: 50%;
+	border: none;
+	padding: 12px;
+	color: #ffffff;
+	text-transform: uppercase;
+	letter-spacing: 2px;
+}
+
+.contact .address{
+	text-align: right;
+}
+
+.footer{
+	background-color: #263238;
+	width: 100%;
+	display: flex;
+	padding: 24px;
+	justify-content: space-between;
+	align-items: flex-start;
+}
+
+.page-links{
+	display: flex;
+	flex-direction: column;
+}
+
+.page-links a{
+	color: #ffffff;
+	text-transform: uppercase;
+	margin-bottom: 10px;
+}
+
+.copyright{
+	text-align: right;
+	color: #ffffff;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+}
+
+.copyright a{
+	color: #ffffff;
+	margin-bottom: 10px;
+}
+
+.nuva{
+	width: 40px;
+	margin-top: 16px;
+}
+
+.section-intro{
+	background-color: transparent;
+	padding: 2em 0;
+}
+
+.section-header{
+	background: #005BEA;
+	background: -webkit-linear-gradient(to right, #00C6FB, #005BEA);
+	background: linear-gradient(to right, #00C6FB, #005BEA);
+	width: 100%;
+	padding: 20px;
+	border-radius: 3px;
+	color: #ffffff;
+	text-transform: uppercase;
+	letter-spacing: 3px;
+	font-weight: bold;
+	font-size: 30px;
+}
+
+.section-intro p{
+	width: 50%;
+	font-size: 18px;
+}
+
+.service-box{
+	padding: 16px;
+	display: flex;
+	justify-content: space-between;
+	align-items: flex-start;
+	margin-bottom: 40px;
+	position: relative;
+}
+
+.service-info{
+	width: 45%;
+}
+
+.service-title{
+	width: 100%;
+	text-transform: uppercase;
+	font-weight: bold;
+	font-size: 24px;
+	display: flex;
+	align-items: center;
+	justify-content: flex-start;
+}
+
+.service-title img{
+	width: 70px;
+	margin-right: 10px;
+}
+
+.service-info p{
+	font-size: 18px;
+}
+
+.service-image{
+	width: 40%;
+}
+
+.service-image img{
+	width: 100%;
+}
+
+.service-bars{
+	width: 70px;
+	position: absolute;
+	bottom: 16px;
+	left: 16px;
+}
+
+.digitalization .service-title{
+	color: #005BEA;
+}
+
+/* --- MEDIA QUERIES --- */
+
+@media screen and (max-height:450px){
+	.overlay-menu a{
+		font-size:20px;
+	}
+	.overlay-menu .closebtn{
+		font-size:40px;
+		top:15px;
+		right:35px;
+	}
+}
+/* TABLET */
+@media screen and (max-width: 768px) {
+	.nav-menu .links{
+		display: none;
+	}
+	.mobile-menu{
+		display: flex;
+	}
+	.gradient-overlay{
+		padding: 3em;
+	}
+	.gradient-overlay h1{
+		margin-top: 0;
+		width: 70%;
+	}
+	.content{
+		width: 95%;
+		padding: 2em;
+	}
+	.contact .form{
+		width: 50%;
+	}
+
+	.service-bars{
+		display: none;
+	}
+}
+
+/* PHONE */
+@media screen and (max-width: 769px) {
+	.mobile-menu{
+		width: 35px;
+	}
+	.nav-menu .logo img{
+		width: 150px;
+	}
+	.mobile-menu div{
+		margin: 3px;
+	}
+	.gradient-overlay{
+		padding: 2em;
+	}
+	.gradient-overlay h1{
+		font-size: 38px;
+	}
+	.description{
+		padding-bottom: 0;
+		overflow: auto;
+	}
+	.description p{
+		width: 100%;
+	}
+	.services-brief{
+		justify-content: center;
+	}
+	.contact{
+		flex-direction: column;
+	}
+	.contact .form{
+		width: 100%;
+	}
+	.contact .address{
+		width: 100%;
+		margin-top: 1em;
+		text-align: center;
+	}
+	.footer{
+		font-size: 14px;
+	}
+	.nuva{
+		width: 60px;
+	}
+	.section-header{
+		font-size: 20px;
+	}
+	.section-intro p{
+		width: 100%;
+		font-size: 16px;
+	}
+	.service-box{
+		flex-direction: column;
+	}
+	.service-info{
+		width: 100%;
+	}
+	.service-image{
+		width: 100%;
+		height: 100px;
+		overflow: hidden;
+	}
+	.service-image img{
+		object-fit: cover;
+	}
 }
