--- a/css/style.scss
+++ b/css/style.scss
@@ -258,6 +258,10 @@ a{
 	text-transform: uppercase;
 }
 
+.contact .form{
+	width: 50%;
+}
+
 .contact .form p{
 	margin-top: 0;
 }
@@ -404,6 +408,70 @@ input[type="submit"]{
 	color: #005BEA;
 }
 
+.experience-header{
+	width: 90%;
+	max-width: 1400px;
+	margin: 0 auto;
+	text-transform: uppercase;
+	letter-spacing: 3px;
+	margin-bottom: 1em;
+}
+
+.showcase-container{
+	display: flex;
+	flex-wrap: wrap;
+	flex: 1;
+	margin-bottom: 2em;
+	justify-content: space-between;
+}
+.client{
+	width: 23%;
+	min-width: 200px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	position: relative;
+	margin-bottom: 10px;
+}
+
+.client img{
+	width: 100%;
+}
+
+.client-overlay{
+	width: 100%;
+	height: 100%;
+	background: #005BEA;
+	position: absolute;
+	top: 0;
+	left: 0;
+	display: none;
+	text-align: center;
+	justify-content: center;
+	align-items: center;
+	font-weight: bold;
+	color: #ffffff;
+	text-transform: uppercase;
+	letter-spacing: 3px;
+	background: -webkit-linear-gradient(to top, #00C6FB, #005BEA);
+	background: linear-gradient(to top, #00C6FB, #005BEA);
+	transition: all 0.3s ease;
+}
+
+.client:hover .client-overlay{
+	display: flex;
+}
+.closing-logo-container{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin: 2em 0;
+}
+.closing-logo{
+	width: 300px;
+	margin: 0 auto;
+}
+
 /* --- MEDIA QUERIES --- */
 
 @media screen and (max-height:450px){
@@ -469,7 +537,7 @@ input[type="submit"]{
 		width: 100%;
 	}
 	.services-brief{
-		justify-content: center;
+		justify-content: space-between;
 	}
 	.contact{
 		flex-direction: column;
@@ -509,4 +577,12 @@ input[type="submit"]{
 	.service-image img{
 		object-fit: cover;
 	}
+	.showcase-container{
+		padding: 10px;
+	}
+	.client{
+		width: 49%;
+		min-width: initial;
+	}
+
 }
